fixed text alignment

--- a/src/components/circleAnimation/styles.module.scss
+++ b/src/components/circleAnimation/styles.module.scss
@@ -68,7 +68,6 @@
 
 .name {
   position: absolute;
-  right: 76px;
-  top: 52px;
+  left: 55px;
   margin: 0;
 }
